force-app/main/default/objects/Tournament_Participant__c/Tournament_Participant__c.object-meta.xml
<CustomObject>
    <description>A Player enrolled in a Tournament. Tracks their tournament score and progress.</description>
    <label>Tournament Participant</label>
    <nameField>
        <displayFormat>TP-{0000000}</displayFormat>
        <label>Participant #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tournament Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>