force-app/main/default/objects/Tournament_Participant__c/fields/Game_Session__c.field-meta.xml
<CustomField>
    <fullName>Game_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Game Session created when this participant played their tournament match.</description>
    <label>Game Session</label>
    <referenceTo>Game_Session__c</referenceTo>
    <relationshipLabel>Tournament Participant Entries</relationshipLabel>
    <relationshipName>Tournament_Participant_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>