force-app/main/default/objects/Tournament_Participant__c/fields/Last_Played_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Played_At__c</fullName>
    <label>Last Played At</label>
    <type>DateTime</type>
</CustomField>