force-app/main/default/objects/Tournament_Participant__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Player</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Tournament Entries</relationshipLabel>
    <relationshipName>Tournament_Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>