force-app/main/default/objects/Tournament_Participant__c/fields/Questions_Answered__c.field-meta.xml
<CustomField>
    <fullName>Questions_Answered__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Questions Answered</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>