force-app/main/default/objects/Tournament_Participant__c/fields/Questions_Correct__c.field-meta.xml
<CustomField>
    <fullName>Questions_Correct__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Questions Correct</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>