force-app/main/default/objects/Tournament_Participant__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Where the participant registered from.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
                <default>true</default>
                <label>Admin</label>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>