force-app/main/default/objects/Tournament_Participant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
                <default>true</default>
                <label>Registered</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Winner</fullName>
            </value>
            <value>
                <fullName>Eliminated</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>