force-app/main/default/objects/Tournament_Participant__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>