force-app/main/default/objects/Tournament_Participant__c/fields/Tournament__c.field-meta.xml
<CustomField>
    <fullName>Tournament__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tournament</label>
    <referenceTo>Tournament__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>