force-app/main/default/objects/Tournament_Participant__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Composite Tournament__c + Player__c, prevents duplicate registrations.</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>